# QtCalculator_v1.0

./: README.md  README_RUS.md
src/: CMakeLists.txt  Makefile  graphic.cpp  graphic.h  graphic.ui  main.cpp  main_window.cpp  main_window.h  mainwindow.ui  manual.texi
src/backend/: check_s21_calculator.c  s21_calculator.h  s21_credit_calculator.c  s21_deposit_calculator.c  s21_list.c  s21_list.h  s21_notation_calculator.c  s21_stack.c  s21_stack.h
